# MediSysJava

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  DailySummaryReport_2025-06-01  Dockerfile  LICENSE.md  README.md  WeeklyAnalysisReport_2025-06-01  docker-compose.yml  pom.xml  pyproject.toml
config/: prometheus.yml  redis.conf
docs/: Makefile  OPERATIONS_MANUAL.md  README.md  USER_MANUAL.md  admin-guide.rst  api-reference.rst  architecture.rst  changelog.rst  conf.py  contact.rst  contributing.rst  convert_markdown.py  deployment.rst  developer-guide.rst  faq.rst  index.rst  installation.rst  license.rst  quick-start.rst  readme.rst  requirements.txt  security.rst  troubleshooting.rst  user-manual.rst
docs/_static/css/: custom.css
docs/_static/js/: custom.js
docs/wiki/: Developer-Guide.md  FAQ.md  Home.md  Installation-Guide.md  Quick-Start.md  User-Manual.md
scripts/: load-test.sh  security-audit.sh  setup-test-db.sql  test-db-connection.sh
src/main/java/com/medisys/desktop/: MainApp.java  MediSysApp.java  TestApp.java
src/main/java/com/medisys/desktop/config/: AppConfig.java  AsyncConfig.java  CacheConfig.java  SecurityConfig.java
src/main/java/com/medisys/desktop/controller/: DepartmentController.java  DoctorController.java  FinanceController.java  LoginController.java  PatientController.java
src/main/java/com/medisys/desktop/health/: HealthCheckService.java
src/main/java/com/medisys/desktop/model/: AuditLog.java  Department.java  Doctor.java  Finance.java  Patient.java  User.java
src/main/java/com/medisys/desktop/monitoring/: ApplicationMetrics.java
src/main/java/com/medisys/desktop/security/: SecurityService.java
src/main/java/com/medisys/desktop/service/: AsyncAuditService.java  AuditService.java  AuthService.java  CachedPatientService.java  DepartmentService.java  DoctorService.java  FinanceService.java  PatientService.java
src/main/java/com/medisys/desktop/ui/: LoginWindow.java  MainDashboard.java
src/main/java/com/medisys/desktop/ui/components/: QuickActionsPanel.java
src/main/java/com/medisys/desktop/util/: StyleManager.java
src/main/java/com/medisys/desktop/utils/: IconLibrary.java  ReportExporter.java
src/main/resources/: department.fxml  doctor.fxml  finance.fxml  login.fxml  patient.fxml
src/main/resources/css/: styles.css
src/main/resources/db/migration/: V1__init.sql
src/main/resources/styles/: modern-theme.css
src/test/java/com/medisys/desktop/performance/: PerformanceTestSuite.java
src/test/java/com/medisys/desktop/security/: SecurityAuditTest.java  SecurityServiceTest.java
src/test/java/com/medisys/desktop/service/: AuthServiceTest.java  CachedPatientServiceTest.java  PatientServiceTest.java
(+14 files in other folders)
