[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medisys"
version = "1.0.0"
description = "Enterprise Healthcare Management System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dr. Mazharuddin Mohammed", email = "mazharuddin.mohammed.official@fmail.com"}
]
maintainers = [
    {name = "Dr. Mazharuddin Mohammed", email = "mazharuddin.mohammed.official@fmail.com"}
]
keywords = [
    "hospital-management",
    "healthcare",
    "patient-management",
    "medical-records",
    "appointment-scheduling",
    "javafx",
    "spring-boot"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Java",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Office/Business :: Scheduling",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=2.0.0",
    "sphinx-design>=0.5.0",
    "sphinx-tabs>=3.4.1",
    "pillow>=10.0.0",
    "pyyaml>=6.0.1",
]
dev = [
    "pytest>=7.4.0",
    "coverage>=7.2.7",
    "doc8>=1.1.1",
    "rstcheck>=6.1.2",
]

[project.urls]
Homepage = "https://github.com/Mazharuddin-Mohammed/MediSysJava"
Documentation = "https://medisysjava.readthedocs.io/"
Repository = "https://github.com/Mazharuddin-Mohammed/MediSysJava.git"
Issues = "https://github.com/Mazharuddin-Mohammed/MediSysJava/issues"
Discussions = "https://github.com/Mazharuddin-Mohammed/MediSysJava/discussions"
Changelog = "https://github.com/Mazharuddin-Mohammed/MediSysJava/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["*.md", "*.rst", "*.txt", "*.yaml", "*.yml"]

[tool.sphinx]
source-dir = "docs"
build-dir = "docs/_build"

[tool.doc8]
ignore-path = ["docs/_build", "docs/_static", "target"]
max-line-length = 120
sphinx = true

[tool.rstcheck]
ignore-directives = [
    "automodule",
    "autoclass",
    "autofunction",
    "grid",
    "grid-item-card",
    "code-block",
    "note",
    "warning",
    "image",
]
ignore-roles = [
    "doc",
    "ref",
    "meth",
    "class",
    "func",
    "mod",
]

[tool.coverage.run]
source = ["."]
omit = [
    "docs/*",
    "target/*",
    "*.class",
    "*.jar",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
